<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TwistedEquationsTutorial</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="press_me">Press Me</string>
    <string name="hello_android">Hello Android</string>
    <string name="name">Name</string>
    <string name="comment">Comment</string>
    <string name="other">Other</string>
    <string name="add_comment">Add a comment</string>
    <string name="blank"></string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="refresh">Refresh</string>
    <string name="twitter_1">Twitter level 1</string>
    <string name="twitter_2">Twitter level 2</string>
    <string name="twitter_3">Twitter level 3</string>
    <string name="twitter_4">Still more twitter</string>
    <string name="twitter_4_1">Twitter level 4.1</string>
    <string name="twitter_4_2">Twitter level 4.2</string>
    <string name="twitter_4_3">Twitter level 4.3</string>
    <string name="twitter_4_4">Twitter level 4.4</string>
        
</resources>
